# devops-incident-response

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  constants.py  eval_baseline.py  grader.py  gradio_app.py  inference.py  models.py  openenv.yaml  push_changes.bat  push_changes.ps1  pyproject.toml  quick_push.sh  requirements.txt  start.py  tasks.py
.github/workflows/: space-keepalive.yml
outputs/: inference_baseline_run.txt  task_score_summary.json
server/: Dockerfile  __init__.py  app.py  environment.py  incident_environment.py  requirements.txt
tests/: __init__.py  test_environment.py  test_fixes.py
