[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops_incident_env"
version = "1.0.0"
description = "DevOps Incident Response RL Environment for SRE triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.22.0",
    "pytest>=7.4.0",
]

[project.scripts]
server = "server.app:main"
